# llvm-pass-skeleton

./: CMakeLists.txt  a.out
skeleton/: CMakeLists.txt  Skeleton.cpp  Skeleton.h
